examples/kubernetes/quickstarts/overlays/haproxy-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-app
  namespace: quickstarts
  labels:
    app.kubernetes.io/name: echo-app
  annotations:
    haproxy-ingress.github.io/auth-url: "https://heimdall.heimdall.svc.cluster.local:4456"
    haproxy-ingress.github.io/auth-method: "*"
    haproxy-ingress.github.io/auth-headers-succeed: "Authorization"
    haproxy-ingress.github.io/headers: |
      X-Forwarded-Uri: %[url]
      X-Forwarded-Path: %[path]
spec:
  ingressClassName: "haproxy"
  rules:
    - host: echo-app.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-app
                port:
                  number: 8080
